force-app/main/default/objects/NN_Country__c/NN_Country__c.object-meta.xml
<CustomObject>
    <description>Custom object meant to hold data about countries from countrylayer.com</description>
    <label>Country</label>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>