force-app/main/default/objects/NN_Country__c/fields/NN_Alpha2Code__c.field-meta.xml
<CustomField>
    <fullName>NN_Alpha2Code__c</fullName>
    <label>Alpha2Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>