force-app/main/default/objects/NN_Country__c/fields/NN_CapitalCity__c.field-meta.xml
<CustomField>
    <fullName>NN_CapitalCity__c</fullName>
    <label>Capital City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>