force-app/main/default/objects/NN_Country__c/fields/NN_Region__c.field-meta.xml
<CustomField>
    <fullName>NN_Region__c</fullName>
    <label>Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>