force-app/main/default/objects/NN_Country__c/fields/NN_RegionalBlocs__c.field-meta.xml
<CustomField>
    <fullName>NN_RegionalBlocs__c</fullName>
    <label>RegionalBlocs</label>
    <length>50</length>
    <type>Text</type>
</CustomField>